--- a/UpaProject/Views/MainWindow.xaml
+++ b/UpaProject/Views/MainWindow.xaml
@@ -11,7 +11,7 @@
         <ContextMenu Width="auto"
                      Height="auto"
                      x:Key="ContextCatalogs">
-            <MenuItem x:Name="BtnCatalogEq"
+            <MenuItem x:Name="BtnCatalogPers"
                  FontFamily="Franklin Gothic Heavy"
                  FontSize="12pt"
                  MinHeight="40"
@@ -19,8 +19,8 @@
                  Foreground="#FF3D3D35"
                  Background="#7F088DD0"
                  Padding="3"
-                 Header="Справочник оборудования и материалов"
-                      Click="BtnCatalogEq_Click"/>
+                 Header="Справочник Сотрудников"
+                      Click="BtnCatalogPers_Click"/>
             <!--<MenuItem x:Name="BtnCatalogASUEq"
                       Background="#FF088DD0"
                       MinHeight="45"
