--- a/UpaProject/Views/Catalogs/PersonsCatalog/PersonsCatalogPage.xaml
+++ b/UpaProject/Views/Catalogs/PersonsCatalog/PersonsCatalogPage.xaml
@@ -25,14 +25,11 @@
                     Content="Новый сотрудник"
                         Command="{Binding AddPerson}"/>
                 <Button Style="{StaticResource BtnFrame}"
-                    Content="Редактировать"
-                        Command="{Binding AddPerson}"/>
-                <Button Style="{StaticResource BtnFrame}"
                     Name="BtnToExcel"
                     Content="Вывод данных в Excel"/>
                 <Button Style="{StaticResource BtnFrame}"
                         Content="Удалить"
-                        Command="{Binding ResourceUpdate}"/>
+                        Command="{Binding DeletePosition}"/>
                 <Button Style="{StaticResource BtnFrame}"
                         Content="Обновить"
                         Command="{Binding ResourceUpdate}"/>
@@ -43,17 +40,29 @@
                   IsReadOnly="False"
                   CanUserAddRows="False"
                   ItemsSource="{Binding TableSource, Mode=TwoWay}"
+                  SelectedItem="{Binding SelectedRow}"
                   >
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ФИО" Binding="{Binding Name }" />
                 <DataGridTextColumn Header="Должность" Binding="{Binding Role}"/>
-                <DataGridTemplateColumn IsReadOnly="True">
+                <DataGridTemplateColumn Header="Статус">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <ComboBox SelectedIndex="{Binding WorkGroup,Mode=TwoWay}">
-                                <ComboBoxItem Content="Неоперделено" TabIndex="0"/>
-                                <ComboBoxItem Content="Рабочий" TabIndex="1"/>
-                                <ComboBoxItem Content="ИТР" TabIndex="2"/>
+                            <ComboBox Text="{Binding StatusValues.Status,Mode=TwoWay}">
+                                <ComboBoxItem Content="Работает"/>
+                                <ComboBoxItem Content="Уволен"/>
+                                <ComboBoxItem Content="В отпуске"/>
+                            </ComboBox>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn IsReadOnly="False">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <ComboBox Text="{Binding WorkGroupValues.WorkGroup,Mode=TwoWay}">
+                                <ComboBoxItem Content="Неопределено"/>
+                                <ComboBoxItem Content="Рабочий"/>
+                                <ComboBoxItem Content="ИТР"/>
                             </ComboBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
