Доработано главное окно с возмоностью использования двух справочников

--- a/UpaProject/Views/MainWindow.xaml
+++ b/UpaProject/Views/MainWindow.xaml
@@ -12,21 +12,25 @@
                      Height="auto"
                      x:Key="ContextCatalogs">
             <MenuItem x:Name="BtnCatalogPers"
-                 FontFamily="Franklin Gothic Heavy"
-                 FontSize="12pt"
-                 MinHeight="40"
-                 FontWeight="DemiBold"
-                 Foreground="#FF3D3D35"
-                 Background="#7F088DD0"
-                 Padding="3"
-                 Header="Справочник Сотрудников"
+                      FontFamily="Franklin Gothic Heavy"
+                      FontSize="12pt"
+                      MinHeight="40"
+                      FontWeight="DemiBold"
+                      Foreground="#FF3D3D35"
+                      Background="#7F088DD0"
+                      Padding="3"
+                      Header="Справочник Сотрудников"
                       Click="BtnCatalogPers_Click"/>
-            <!--<MenuItem x:Name="BtnCatalogASUEq"
-                      Background="#FF088DD0"
-                      MinHeight="45"
-                      MaxWidth="500"
+            <MenuItem x:Name="BtnEq"
+                      FontFamily="Franklin Gothic Heavy"
+                      FontSize="12pt"
+                      MinHeight="40"
+                      FontWeight="DemiBold"
+                      Foreground="#FF3D3D35"
+                      Background="#7F088DD0"
+                      Padding="3"
                       Header="Справочник оборудования"
-                      Click="BtnCatalogASUEq_Click"/>-->
+                      Click="BtnEq_Click"/>
         </ContextMenu>
         <ContextMenu Width="auto"
                      Height="auto"
