Справочники. Блокировка функции удаления данных из БД. Реализована функция обновления данных

--- a/UpaProject/Views/Catalogs/PersonsCatalog/PersonsCatalogPage.xaml
+++ b/UpaProject/Views/Catalogs/PersonsCatalog/PersonsCatalogPage.xaml
@@ -26,6 +26,7 @@
                         Command="{Binding AddPerson}"/>
                 <Button Style="{StaticResource BtnFrame}"
                         Content="Удалить"
+                        IsEnabled="False"
                         Command="{Binding DeletePosition}"/>
                 <Button Style="{StaticResource BtnFrame}"
                         Content="Обновить"
