--- a/UpaProject/Views/Catalogs/MTRCatalog/MTRCatalogsPage.xaml
+++ b/UpaProject/Views/Catalogs/MTRCatalog/MTRCatalogsPage.xaml
@@ -31,6 +31,7 @@
                         Command="{Binding ToExcel}"/>
                 <Button Style="{StaticResource BtnFrame}"
                         Content="Удалить"
+                        IsEnabled="False"
                         Command="{Binding }"/>
                 <Button Style="{StaticResource BtnFrame}"
                         Content="Обновить"
