Добавлено окно добавления нового МТР в БД. Главное окно переведено под MVVM.

--- a/UpaProject/Views/Catalogs/PersonsCatalog/PageNewCatalogPage.xaml
+++ b/UpaProject/Views/Catalogs/PersonsCatalog/PageNewCatalogPage.xaml
@@ -61,7 +61,7 @@
             <Button Content="Отмена"
                     FontSize="13pt"
                     Style="{StaticResource BtnFrame}"
-                    Command="{Binding Back}"
+                    Command="{Binding GoBack}"
                     />
             <TextBlock Style="{StaticResource Txt}"
                        HorizontalAlignment="Center"                       
