--- a/UpaProject/Views/Catalogs/TagsCatalog/TagsCatalogPage.xaml
+++ b/UpaProject/Views/Catalogs/TagsCatalog/TagsCatalogPage.xaml
@@ -23,7 +23,7 @@
                     Margin="5">
                 <Button Style="{StaticResource BtnFrame}"
                     Content="Новая позиция"
-                        Command="{Binding }"/>
+                        Command="{Binding NewPosition}"/>
                 <Button Style="{StaticResource BtnFrame}"
                         Content="Удалить"
                         IsEnabled="False"
