--- a/UpaProject/Views/Catalogs/MTRCatalog/AddNewMTRPage.xaml
+++ b/UpaProject/Views/Catalogs/MTRCatalog/AddNewMTRPage.xaml
@@ -1,15 +1,15 @@
-﻿<Page x:Class="UpaProject.Views.Storages.NewMTRPage"
+﻿<Page x:Class="UpaProject.Views.Catalogs.MTRCatalog.AddNewMTRPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:vm="clr-namespace:UpaProject.ViewModels"
-      xmlns:local="clr-namespace:UpaProject.Views.Storages"
+      xmlns:local="clr-namespace:UpaProject.Views.Catalogs.MTRCatalog"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-       Title="Новый материал">
+      Title="Добавление нового МТР в БД">
     <Page.DataContext>
-        <vm:NewMTRPageViewModel/>
+        <vm:AddMTRPageViewModel/>
     </Page.DataContext>
     <DockPanel>
         <StackPanel HorizontalAlignment="Center"
@@ -25,9 +25,9 @@
                          Width="100"
                          ItemsSource="{Binding Path=MTRs}"
                          SelectedItem="{Binding Path=SapIdMTR}"
+                          Text="{Binding IdSap}"
                          DisplayMemberPath="IdSap"
                          FontSize="13pt"
-                         Name="TxbIdSap"
                          IsEditable="True"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal"
@@ -36,7 +36,6 @@
                            Text="Наименование:"
                            FontSize="13pt"/>
                 <TextBox Style="{StaticResource Txb}"
-                         Name="TxbName"
                          Text="{Binding NameMTR}"
                          FontSize="13pt"
                          Width="300"/>
@@ -50,53 +49,19 @@
                          Width="100"
                          FontSize="13pt"
                          MaxLength="6"
-                         Text="{Binding Path=UnitMTR}"
-                         Name="TxbBaseEI"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal"
-                        Margin="5">
-                <TextBlock Style="{StaticResource Txt}"
-                           Text="Количество: "
-                           FontSize="13pt"/>
-                <TextBox Style="{StaticResource Txb}"
-                         Width="100"
-                         FontSize="13pt"
-                         Text="{Binding Path=QuantityMTR}"
-                         Name="TxbQuantity"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal"
-                        Margin=" 5">
-                <TextBlock Text="Расположение:"
-                           Style="{StaticResource Txt}"
-                           FontSize="13pt"/>
-                <ComboBox DisplayMemberPath="Storage"
-                          VerticalAlignment="Center"
-                          SelectedValuePath="IDStorage"
-                          ItemsSource="{Binding Storages}"
-                          Style="{StaticResource Cmb}"
-                          Name="CmbStorage"
-                          FontSize="13pt"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal"
-                        Margin="5">
-                <TextBlock Style="{StaticResource Txt}"
-                           Text="Комментарии: "
-                           FontSize="13pt"/>
-                <TextBox Style="{StaticResource Txb}"
-                         Width="300"
-                         FontSize="13pt"
-                         Name="TxbComment"/>
-            </StackPanel>
+                         Text="{Binding Path=UnitMTR}"/>
+            </StackPanel>            
             <Button Content="Продолжить"
                     Style="{StaticResource BtnFrame}"
-                    Name="BtnNext" 
                     FontSize="13pt"
-                    Click="BtnNext_Click"/>
+                    Command="{Binding AddNewMTR}"/>
             <Button Content="Отмена"
                     FontSize="13pt"
                     Style="{StaticResource BtnFrame}"
-                    Name="BtnCancel" Click="BtnCancel_Click"/>
+                    Command="{Binding GoBack}"/>
+            <TextBlock Foreground="Red"
+                       Text="{Binding ErrorText}"
+                       Visibility="{Binding ErrorStatus}"/>
         </StackPanel>
     </DockPanel>
 </Page>
-
