--- a/UpaProject/Views/Catalogs/MTRCatalog/MTRCatalogsPage.xaml
+++ b/UpaProject/Views/Catalogs/MTRCatalog/MTRCatalogsPage.xaml
@@ -31,11 +31,10 @@
                         Command="{Binding ToExcel}"/>
                 <Button Style="{StaticResource BtnFrame}"
                         Content="Удалить"
-                        IsEnabled="False"
-                        Command="{Binding }"/>
+                        Command="{Binding DeleteSelectedRow}"/>
                 <Button Style="{StaticResource BtnFrame}"
                         Content="Обновить"
-                        Command="{Binding }"/>
+                        Command="{Binding ResourceUpdate}"/>
             </StackPanel>
         </GroupBox>
         <DataGrid Margin="10"
@@ -43,6 +42,7 @@
                   IsReadOnly="False"
                   CanUserAddRows="False"
                   ItemsSource="{Binding TableSource, Mode=TwoWay}"
+                  SelectedValue="{Binding SelectedRow}"
                   >
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Гид" Binding="{Binding IdSap }" />
